src/objects/Message__c.object
<CustomObject>
    <description>This object will support internal office messages among users, and office to patient users as well.</description>
    <fields>
        <fullName>Body_Rich_Text__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Header__c</fullName>
        <description>messages under the header</description>
        <label>Message Header</label>
        <referenceTo>Message_Header__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Truncated_Body__c</fullName>
        <description>This field will be filled out by apex code and is used to display in the users message inbox</description>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>IsRead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>